--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ function likes(names) {
                 </section>
 
                 <section class="section main__section">
-                    <h3 class="section__title" id="projects""><span class="section__title-decor">Projects</span></h3>
+                    <h3 class="section__title" id="projects"><span class="section__title-decor">Projects</span></h3>
                     <div class="section__projects">
                         <p>Soon...</p>
                     </div>
@@ -132,7 +132,7 @@ function likes(names) {
                 <section class="section main__section">
                     <h3 class="section__title" id="video"><span class="section__title-decor">Video</span></h3>
                     <div class="section__video">
-                        <iframe class= "section__video-player" src="https://www.youtube-nocookie.com/embed/1RTiaTGuKnM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class= "section__video-player" src="https://www.youtube-nocookie.com/embed/1RTiaTGuKnM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </section>
             </div>
