feat: fill section projects

--- a/index.html
+++ b/index.html
@@ -125,8 +125,47 @@
 
                 <section class="section main__section">
                     <h3 class="section__title" id="projects"><span class="section__title-decor">Projects</span></h3>
-                    <div class="section__projects">
-                        <p>Soon...</p>
+                    <div class="section__projects projects">
+
+                        <article class="projects__article">
+                            <div class="projects__item">
+                                <a href="https://codepen.io/dariija/pen/NWgYZgP" target="_blank">
+                                    <img class="projects__gif" src="images/form_sample.png" alt="project1">
+                                </a>
+                                <div class="projects__info">
+                                    <h4 class="projects__title">Form</h4>
+                                    <p class="projects__text">Feedback form example</p>
+                                    <ul class="section__list list">
+                                        <li class="list__item">HTML</li>
+                                        <li class="list__item">CSS</li>
+                                    </ul>                
+                                </div>
+                            </div>
+                        </article>
+
+                        <article class="projects__article">
+                            <div class="projects__item">
+                                <a href="https://github.com/dariija" target="_blank">
+                                    <img class="projects__gif" src="images/gif/cat1.gif" alt="project1">
+                                </a>
+                                <div class="projects__info">
+                                    <h4 class="projects__title">Project #2</h4>
+                                    <p class="projects__text">Someday there will be something here...</p>
+                                </div>
+                            </div>
+                         </article>
+
+                         <article class="projects__article">
+                            <div class="projects__item">
+                                <a href="https://github.com/dariija" target="_blank">
+                                    <img class="projects__gif" src="images/gif/cat2.gif" alt="project1">
+                                </a>
+                                <div class="projects__info">
+                                    <h4 class="projects__title">Project #3</h4>
+                                    <p class="projects__text">Someday there will be something here...</p>
+                                </div>
+                            </div>
+                         </article>
                     </div>
                 </section>
 
